--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
           <table role="presentation" style="width:94%;max-width:600px;border:none;border-spacing:0;text-align:left;font-family:Arial,sans-serif;font-size:16px;line-height:22px;color:#363636;">
             <tr>
               <td style="padding:40px 30px 30px 30px;text-align:center;font-size:24px;font-weight:bold;">
-                <a href="http://www.abaris.com/" style="text-decoration:none;"><img src="file://///abaris-s-12210/Shared/Erin/Graphics Stuff/Ads/Emails/eBlast-Git/GitHub/eBlast/abaris-logo-color no background.png" width="2130" alt="Logo" style="width:80%;max-width:165px;height:auto;border:none;text-decoration:none;color:#ffffff;"></a>
+                <a href="http://www.abaris.com/" style="text-decoration:none;"><img src="abaris-logo-color no background.png" width="2130" alt="Logo" style="width:80%;max-width:165px;height:auto;border:none;text-decoration:none;color:#ffffff;"></a>
               </td>
             </tr>
             <tr>
               <td style="padding:30px;background-color:#ffffff;">
-                <h1 style="margin-top:0;margin-bottom:16px;font-size:26px;line-height:32px;font-weight:bold;letter-spacing:-0.02em;">Welcome to our responsive email!</h1>
-                <p style="margin:0;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, <a href="http://www.example.com/" style="color:#e50d70;text-decoration:underline;">eget accumsan dictum</a>, nisi libero ultricies ipsum, in posuere mauris neque at erat.</p>
+                <h1 style="margin-top:0;margin-bottom:16px;font-size:26px;line-height:32px;font-weight:bold;letter-spacing:-0.02em;">Abaris Training Resources, Inc. for all your Advanced Composite training needs</h1>
+                <p style="margin:0;">We have over <a href="https://portal.abaris.com/courses/" style="color:#000080;text-decoration:underline;">23 courses</a> to choose from.</p>
               </td>
             </tr>
             <tr>
               <td style="padding:0;font-size:24px;line-height:28px;font-weight:bold;">
-                <a href="http://www.example.com/" style="text-decoration:none;"><img src="https://assets.codepen.io/210284/1200x800-2.png" width="600" alt="" style="width:100%;height:auto;display:block;border:none;text-decoration:none;color:#363636;"></a>
+                <a href="http://www.abaris.com/" style="text-decoration:none;"><img src="Reno Facility Square Crop.png" width="600" alt="Abaris Facility" style="width:100%;height:auto;display:block;border:none;text-decoration:none;color:#363636;"></a>
               </td>
             </tr>
             <tr>
@@ -82,16 +82,16 @@
                 <td style="width:145px;" align="left" valign="top">
                 <![endif]-->
                 <div class="col-sml" style="display:inline-block;width:100%;max-width:145px;vertical-align:top;text-align:left;font-family:Arial,sans-serif;font-size:14px;color:#363636;">
-                  <img src="https://assets.codepen.io/210284/icon.png" width="115" alt="" style="width:80%;max-width:115px;margin-bottom:20px;">
+                  <img src="Carbon Fiber with Scissors.png" width="6000" alt="Carbon fiber being cut with scissors" style="width:80%;max-width:115px;margin-bottom:20px;">
                 </div>
                 <!--[if mso]>
                 </td>
                 <td style="width:395px;padding-bottom:20px;" valign="top">
                 <![endif]-->
                 <div class="col-lge" style="display:inline-block;width:100%;max-width:395px;vertical-align:top;padding-bottom:20px;font-family:Arial,sans-serif;font-size:16px;line-height:22px;color:#363636;">
-                  <p style="margin-top:0;margin-bottom:12px;">Nullam mollis sapien vel cursus fermentum. Integer porttitor augue id ligula facilisis pharetra. In eu ex et elit ultricies ornare nec ac ex. Mauris sapien massa, placerat non venenatis et, tincidunt eget leo.</p>
-                  <p style="margin-top:0;margin-bottom:18px;">Nam non ante risus. Vestibulum vitae eleifend nisl, quis vehicula justo. Integer viverra efficitur pharetra. Nullam eget erat nibh.</p>
-                  <p style="margin:0;"><a href="https://example.com/" style="background: #ff3884; text-decoration: none; padding: 10px 25px; color: #ffffff; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#ff3884"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">Claim yours now</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
+                  <p style="margin-top:0;margin-bottom:12px;">We offer Engineering, Manufacturing, NDI and Repair courses.</p>
+                  <p style="margin-top:0;margin-bottom:18px;">Each of our 5-day courses is an entire semester's worth of knowledge!</p>
+                  <p style="margin:0;"><a href="https://portal.abaris.com/events" style="background: #000080; text-decoration: none; padding: 10px 25px; color: #ffffff; border-radius: 4px; display:inline-block; mso-padding-alt:0;text-underline-color:#ff3884"><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%;mso-text-raise:20pt">&nbsp;</i><![endif]--><span style="mso-text-raise:10pt;font-weight:bold;">Enroll Now</span><!--[if mso]><i style="letter-spacing: 25px;mso-font-width:-100%">&nbsp;</i><![endif]--></a></p>
                 </div>
                 <!--[if mso]>
                 </td>
@@ -102,18 +102,21 @@
             </tr>
             <tr>
               <td style="padding:30px;font-size:24px;line-height:28px;font-weight:bold;background-color:#ffffff;border-bottom:1px solid #f0f0f5;border-color:rgba(201,201,207,.35);">
-                <a href="http://www.example.com/" style="text-decoration:none;"><img src="https://assets.codepen.io/210284/1200x800-1.png" width="540" alt="" style="width:100%;height:auto;border:none;text-decoration:none;color:#363636;"></a>
-              </td>
+              <a href="https://abaris.com/contact-us/"><img src="Computer Photo.jpg" width="1100" alt="Contact Us" style="width:100%;height:auto;border:none;text-decoration:none;color:#363636;"></a></td>
             </tr>
             <tr>
               <td style="padding:30px;background-color:#ffffff;">
-                <p style="margin:0;">Duis sit amet accumsan nibh, varius tincidunt lectus. Quisque commodo, nulla ac feugiat cursus, arcu orci condimentum tellus, vel placerat libero sapien et libero. Suspendisse auctor vel orci nec finibus.</p>
+                <p style="text-align:center; margin:0;">Whether at one of our scheduled courses in
+Reno, NV, or at an onsite course at your
+facility, we provide you with the same level
+of training. Contact us today for more information.</p>
               </td>
             </tr>
             <tr>
               <td style="padding:30px;text-align:center;font-size:12px;background-color:#404040;color:#cccccc;">
-                <p style="margin:0 0 8px 0;"><a href="http://www.facebook.com/" style="text-decoration:none;"><img src="https://assets.codepen.io/210284/facebook_1.png" width="40" height="40" alt="f" style="display:inline-block;color:#cccccc;"></a> <a href="http://www.twitter.com/" style="text-decoration:none;"><img src="https://assets.codepen.io/210284/twitter_1.png" width="40" height="40" alt="t" style="display:inline-block;color:#cccccc;"></a></p>
-                <p style="margin:0;font-size:14px;line-height:20px;">&reg; Someone, Somewhere 2021<br><a class="unsub" href="http://www.example.com/" style="color:#cccccc;text-decoration:underline;">Unsubscribe instantly</a></p>
+                <p style="margin:0 0 8px 0;"><a href="https://www.facebook.com/AbarisTraining" style="text-decoration:none;"><img src="icon-facebook.png" width="80" height="80" alt="f" style="display:inline-block;color:#cccccc;"></a></p>
+                <p style="margin:0;font-size:14px;line-height:20px;">&reg; Abaris Training Resources, Inc. 2021 <br>
+					5401 Longley Lane, Suite 49, Reno NV 89511 • 775.827.6568 <br> www.abaris.com • admin@abaris.com <br><a href="mailto:admin@abaris.com ?Subject=Unsubscribe" style="color:#000080;text-decoration:underline;">Unsubscribe</a></p>
               </td>
             </tr>
           </table>
