--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <table role="presentation" style="width:94%;max-width:600px;border:none;border-spacing:0;text-align:left;font-family:Arial,sans-serif;font-size:16px;line-height:22px;color:#363636;">
             <tr>
               <td style="padding:40px 30px 30px 30px;text-align:center;font-size:24px;font-weight:bold;">
-                <a href="http://www.abaris.com/" style="text-decoration:none;"><img src="abaris-logo-color no background.png" width="2130" alt="Logo" style="width:80%;max-width:165px;height:auto;border:none;text-decoration:none;color:#ffffff;"></a>
+                <a href="http://www.abaris.com/" style="text-decoration:none;"><img src="https://i.ibb.co/vkF7dVb/abaris-logo-color-no-background.png" width="2130" alt="Logo" style="width:80%;max-width:165px;height:auto;border:none;text-decoration:none;color:#ffffff;"></a>
               </td>
             </tr>
             <tr>
@@ -71,7 +71,7 @@
             </tr>
             <tr>
               <td style="padding:0;font-size:24px;line-height:28px;font-weight:bold;">
-                <a href="http://www.abaris.com/" style="text-decoration:none;"><img src="Reno Facility Square Crop.png" width="600" alt="Abaris Facility" style="width:100%;height:auto;display:block;border:none;text-decoration:none;color:#363636;"></a>
+                <a href="http://www.abaris.com/" style="text-decoration:none;"><img src="https://i.ibb.co/d2W9Pfj/Reno-Facility-Square-Crop.png" width="546" alt="Abaris Facility" style="width:100%;height:auto;display:block;border:none;text-decoration:none;color:#363636;"></a>
               </td>
             </tr>
             <tr>
@@ -82,7 +82,7 @@
                 <td style="width:145px;" align="left" valign="top">
                 <![endif]-->
                 <div class="col-sml" style="display:inline-block;width:100%;max-width:145px;vertical-align:top;text-align:left;font-family:Arial,sans-serif;font-size:14px;color:#363636;">
-                  <img src="Carbon Fiber with Scissors.png" width="6000" alt="Carbon fiber being cut with scissors" style="width:80%;max-width:115px;margin-bottom:20px;">
+                  <img src="https://i.ibb.co/HghWJHJ/Carbon-Fiber-with-Scissors.png" width="610" alt="Carbon fiber being cut with scissors" style="width:80%;max-width:115px;margin-bottom:20px;">
                 </div>
                 <!--[if mso]>
                 </td>
@@ -102,7 +102,7 @@
             </tr>
             <tr>
               <td style="padding:30px;font-size:24px;line-height:28px;font-weight:bold;background-color:#ffffff;border-bottom:1px solid #f0f0f5;border-color:rgba(201,201,207,.35);">
-              <a href="https://abaris.com/contact-us/"><img src="Computer Photo.jpg" width="1100" alt="Contact Us" style="width:100%;height:auto;border:none;text-decoration:none;color:#363636;"></a></td>
+              <a href="https://abaris.com/contact-us/"><img src="https://i.ibb.co/Qf8k5Fq/Computer-Photo.jpg" width="1100" alt="" style="width:100%;height:auto;border:none;text-decoration:none;color:#363636;"></a></td>
             </tr>
             <tr>
               <td style="padding:30px;background-color:#ffffff;">
@@ -114,7 +114,7 @@ of training. Contact us today for more information.</p>
             </tr>
             <tr>
               <td style="padding:30px;text-align:center;font-size:12px;background-color:#404040;color:#cccccc;">
-                <p style="margin:0 0 8px 0;"><a href="https://www.facebook.com/AbarisTraining" style="text-decoration:none;"><img src="icon-facebook.png" width="80" height="80" alt="f" style="display:inline-block;color:#cccccc;"></a></p>
+                <p style="margin:0 0 8px 0;"><a href="https://www.facebook.com/AbarisTraining" style="text-decoration:none;"><img src="https://i.ibb.co/GJQgqd4/icon-facebook.png" width="80" height="80" alt="f" style="display:inline-block;color:#cccccc;"></a></p>
                 <p style="margin:0;font-size:14px;line-height:20px;">&reg; Abaris Training Resources, Inc. 2021 <br>
 					5401 Longley Lane, Suite 49, Reno NV 89511 • 775.827.6568 <br> www.abaris.com • admin@abaris.com <br><a href="mailto:admin@abaris.com ?Subject=Unsubscribe" style="color:#000080;text-decoration:underline;">Unsubscribe</a></p>
               </td>
@@ -131,4 +131,3 @@ of training. Contact us today for more information.</p>
   </div>
 </body>
 </html>
-
